build: Add scripts for publishing to npm

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "yurnalist": "^0.2.1"
   },
   "scripts": {
-    "init": "./scripts/init.js",
+    "publish:patch": "npm version patch && sudo npm publish",
+    "publish:minor": "npm version minor && sudo npm publish",
+    "publish:major": "npm version major && sudo npm publish",
     "lint": "eslint src",
     "audit:packages": "yarn outdated || true"
   },
