fix(template) Remove keywords hardcoded into template

--- a/templates/package.json
+++ b/templates/package.json
@@ -7,13 +7,7 @@
     "url": "git+#{project.repository.url}.git"
   },
   "files": ["dist", "src", "lib"],
-  "keywords": [
-    "styled-components",
-    "media-queries",
-    "css-in-js",
-    "css",
-    "breakpoints"
-  ],
+  "keywords": [],
   "author": "#{project.author.name}",
   "license": "MIT",
   "bugs": {
