fix(npm): Add back specific files

--- a/templates/package.json
+++ b/templates/package.json
@@ -6,6 +6,7 @@
     "type": "git",
     "url": "git+#{project.repository.url}.git"
   },
+  "files": ["dist", "src", "lib"],
   "keywords": [],
   "author": "#{project.author.name}",
   "license": "MIT",
